# RL-Bot

./: .gitignore  BULLETPROOF_IMPLEMENTATION.md  Changelog.md  EXAMPLES.md  HIERARCHICAL_IMPLEMENTATION_SUMMARY.md  HIERARCHICAL_SYSTEM.md  HYBRID_BOT_README.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_VERIFICATION.md  LICENSE  MIGRATION_SUMMARY.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_README.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_TRAINING.md  README.md  RLGYM_MIGRATION.md  ROCKETMIND_GUIDE.md  ROCKETMIND_SUMMARY.md  SSL_UPGRADE_ANALYSIS.md  TRAINING_GUIDE.md  TRAINING_IMPLEMENTATION_REPORT.md  TRAINING_PIPELINE_FIXES.md  TRAINING_REFACTORING.md  VERIFICATION_REPORT.md  benchmark_results.json  bot.cfg  bot.py  bot_manager.py  cli.py  (+17 more)
.github/workflows/: ci.yml
appearance/: loadout_blue.cfg  loadout_orange.cfg
behaviors/: __init__.py  shadow_defense.py
checkpoints/: checkpoint_step_0.pt  checkpoint_step_1000.pt  metadata.json
config/: logging.yaml  settings.yaml  training.yaml
configs/: base.yaml  config_optimized.yaml  hierarchical_rl.yaml  rewards.yaml  rewards_optimized.yaml  training_optimized.yaml
core/: __init__.py  hierarchical_controller.py  pro_bot.py
core/agents/: __init__.py  hybrid_policy.py  intents.py  ml_policy.py  rule_policy.py
core/env/: __init__.py  normalization_wrappers.py  reward_wrapper.py  rocket_sim_env.py  wrappers.py
core/features/: __init__.py  encoder.py
core/infra/: __init__.py  checkpoints.py  config.py  discord_webhook.py  export.py  logging.py  performance.py  profiler.py
core/llc/: __init__.py
core/models/: __init__.py  nets.py  ppo.py  recurrent_ppo.py  sac.py
decision/: __init__.py  utility_system.py
docs/: IMPLEMENTATION_GUIDE.md  PHASE_0_BASELINE.md  PHASE_1_OPTIMIZATIONS.md  PHASE_2_RECURRENT_PPO.md  PHASE_3_5_ADVANCED.md  PROJECT_STATUS.md  QUICKSTART.md  development.md
gui/: __init__.py  controls_panel.py  main_window.py  status_display.py
integration/: __init__.py  test_env.py
logs/: events.out.tfevents.1762409123.runnervmf2e7y.3662.0  run_metadata.json  training.jsonl
mechanics/: __init__.py  aerial_save.py  bump.py  fast_aerial.py  flick.py  recovery.py  wall_shot.py
metrics/: evaluator.py
reports/: __init__.py  generate_report.py  visualizer.py
rl_bot/: __init__.py  eval.py  train.py
rlbot_agent/: __init__.py  agent.py
rlbot_pro/: __init__.py  control.py  math3d.py  physics_helpers.py  sensing.py  sim.py  state.py
rlgym/: __init__.py
rlgym_sim/: __init__.py
rocketmind/: README.md  __init__.py  checkpoint_manager.py  main.py  streamlit_app.py  train.py
scenarios/: __init__.py  run.py
scripts/: demo_hierarchical.py  diagnose_performance.py  evaluate.py  hyperparameter_search.py  run_rlbot_gui_hint.txt  test_resilience_demo.py  train.py  tune.py  validate_hierarchical.py  validate_training.py  verify_and_benchmark.py
sequences/: halfflip.py  sequence.py  speedflip.py  wavedash.py
telemetry/: __init__.py  metrics.py  telemetry.py
tests/: __init__.py  test_adapter_mapping.py  test_behavior_tree.py  test_config.py  test_curriculum.py  test_diagnostics.py  test_encoder.py  test_envs_rewards.py  test_episode_completion.py  test_eval_elo.py  test_hybrid_policy.py  test_inference_performance.py  test_integration_smoke.py  test_math3d.py  test_mechanics.py  test_mechanics_aerial.py  test_planner_selector.py  test_planning_policy.py  test_ppo.py  test_ppo_enhanced.py  test_recurrent_ppo.py  test_resilience.py  test_rocket_sim_env.py  test_rule_policy.py  test_sensing.py  test_state_and_control.py  test_telemetry_and_metrics.py  test_train_smoke.py  test_wrappers.py
training/: requirements.txt  train.py
util/: ball_prediction.py  boost_manager.py  common_values.py  game_state.py  physics_object.py  player_data.py
(+107 files in other folders)
