[project]
name = "rlbot_pro"
version = "0.1.0"
description = "A production-ready Rocket League bot foundation with pro-style mechanics."
authors = [
    { name = "Sixth", email = "sixth@example.com" },
]
dependencies = [
    "numpy==1.26.4",
    "pydantic==2.7.1",
    "PyYAML==6.0.1",
    "matplotlib==3.9.0",
    "rlbot==1.26.0", # Optional, for main.py
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "mypy==1.10.0",
    "ruff==0.4.4",
    "black==24.4.2",
    "stable-baselines3==2.3.0", # For training stub
    "tensorboard==2.16.2", # Optional for training
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rlbot_pro*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true # Some libs might not have full type hints

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "ASYNC", "B", "C", "G", "PIE", "TID", "PERF", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"] # Ignore self/cls type hints, Any type, and some common ones

[tool.ruff.per-file-ignores]
"training/train.py" = ["E402"] # Allow imports at different places for gated imports

[tool.black]
line-length = 100
target-version = ["py311"]
